메모검색기능추가, 리듀서최적화
